# IKB-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md
ikb_agent/: __init__.py  main.py  models.py  settings.py  storage.py  text_utils.py
ikb_agent/api/: __init__.py  import_router.py  query_router.py  system_router.py
ikb_agent/core/: deps.py  paths.py
ikb_agent/pipeline/: __init__.py  import_pipeline.py  nodes.py  state.py
ikb_agent/pipeline/nodes/: __init__.py  base.py  document_split_node.py  embedding_node.py  entry_node.py  file_utils.py  import_store_node.py  item_name_recognition_node.py  markdown_image_node.py  markdown_load_node.py  pdf_to_markdown_node.py
ikb_agent/processor/: __init__.py
ikb_agent/processor/import_processor/: __init__.py  main_graph.py
ikb_agent/processor/query_processor/: __init__.py
ikb_agent/schema/: __init__.py  query_schema.py  task_schema.py  upload_schema.py
ikb_agent/services/: __init__.py  file_import_service.py  import_service.py  query_service.py  task_service.py
ikb_agent/static/: app.js  index.html  styles.css
ikb_agent/utils/: __init__.py  embedding_utils.py  llm_utils.py  milvus_utils.py  minio_utils.py  mongo_history_utils.py  reranker_utils.py  sse_utils.py  task_utils.py
scripts/: check_mineru.py  download_bge_m3.py  test_connections.py
tests/: test_pipeline.py
